2010-09-30  Vladimir Serbinenko  <phcoder@gmail.com>

	Put terminfo into core on ieee1275 and yeeloong (needed for console).

	* gentpl.py: New groups terminfoinkernel and terminfomodule.
	* grub-core/Makefile.am (KERNEL_HEADER_FILES): Include extcmd.h, arg.h
	and terminfo.h when needed.
	* grub-core/Makefile.core.def (kernel): Include term/terminfo.c,
	term/tparm.c, commands/extcmd.c, lib/arg.c on terminfokernel.
	(terminfo): Enable only on terminfokernel.
	(extcmd): Likewise.
	* include/grub/extcmd.h: Add missing EXPORT_FUNC.
	* include/grub/lib/arg.h: Likewise.
	* grub-core/term/ieee1275/ofconsole.c (grub_ofconsole_dimensions): Fix
	incorrect usage of ->.

2010-09-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/multiboot_mbi2.c (grub_multiboot_make_mbi]
	[GRUB_MACHINE_EFI && __i386__]: Fix typo.

2010-09-29  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix coreboot compilation.

	* grub-core/loader/i386/multiboot_mbi.c (grub_multiboot_get_mbi_size):
	Take VBE info into account even if only text is supported.
	(fill_vbe_info): Take into account the case when only VGA text
	is supported.
	* include/grub/multiboot.h (GRUB_MACHINE_HAS_VBE): Set to zero
	on coreboot, multiboot and qemu.

2010-09-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/relocator.c (malloc_in_range): Trim too verbose
	debug messages.
	(grub_relocator_prepare_relocs): Set movers_chunk.srcv.

2010-09-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/bsd.c (grub_cmd_netbsd): Provide default serial
	parameters.

2010-09-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/arg.c (grub_arg_parse): Fix treating of all commands as
	if they were BSD-style.

2010-09-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/i386/pc/lnxboot.S: Replace
	GRUB_KERNEL_I386_PC_MULTIBOOT_SIGNATURE with
	GRUB_KERNEL_I386_PC_NO_REED_SOLOMON_PART.

2010-09-29  Vladimir Serbinenko  <phcoder@gmail.com>

	Write embedding zone using Reed-Solomon.
